--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -30,6 +30,8 @@
 
 - [如何使用 Cucumber](https://www.ibm.com/developerworks/cn/java/j-lo-cucumber01/)
 
+- [tfs-2015-running-cucumber-selenium-in-a-build](https://stackoverflow.com/questions/35910340/tfs-2015-running-cucumber-selenium-in-a-build)
+
 ## TFS 数据库大小减缓相关资料
 
 [Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
