--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -28,9 +28,12 @@
 
 -  ,Appium 移动端 ui测试
 
-- [如何使用 Cucumber](https://www.ibm.com/developerworks/cn/java/j-lo-cucumber01/)
+- [java 开发如何使用 Cucumber](https://www.ibm.com/developerworks/cn/java/j-lo-cucumber01/)
+
+- [bdd for net/cucumber for net/SpecFlow](https://dotblogs.com.tw/hatelove/archive/2013/01/09/learning-tdd-in-30-days-day24-bdd-specflow-introduction.aspx)
 
 - [tfs-2015-running-cucumber-selenium-in-a-build](https://stackoverflow.com/questions/35910340/tfs-2015-running-cucumber-selenium-in-a-build)
+- [specsync](https://gasparnagy.gitbooks.io/specsync-for-mtm-documentation/content/)
 
 ## TFS 数据库大小减缓相关资料
 
