--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -35,6 +35,8 @@
 - [tfs-2015-running-cucumber-selenium-in-a-build](https://stackoverflow.com/questions/35910340/tfs-2015-running-cucumber-selenium-in-a-build)
 - [specsync](https://gasparnagy.gitbooks.io/specsync-for-mtm-documentation/content/)
 
+- [User Story/ATDD/BDD/TDD - 總結](https://dotblogs.com.tw/hatelove/archive/2013/01/09/learning-tdd-in-30-days-day26-coordinate-user-story-atdd-bdd-tdd.aspx)
+
 ## TFS 数据库大小减缓相关资料
 
 [Guide to reduce TFS database growth using the Test Attachment Cleaner](http://geekswithblogs.net/terje/archive/2011/11/15/guide-to-reduce-tfs-database-growth-using-the-test-attachment.aspx)
