--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -29,6 +29,8 @@
 -  ,Appium 移动端 ui测试
 
 - [java 开发如何使用 Cucumber](https://www.ibm.com/developerworks/cn/java/j-lo-cucumber01/)
+- [利用 BDD 技术加强软件自动化测试](https://www.ibm.com/developerworks/cn/opensource/os-cn-bdd-web-ui-test/index.html)
+- [cucumber 高级用法](https://www.ibm.com/developerworks/cn/java/j-local-Cucumber-high-level/index.html)
 
 - [bdd for net/cucumber for net/SpecFlow](https://dotblogs.com.tw/hatelove/archive/2013/01/09/learning-tdd-in-30-days-day24-bdd-specflow-introduction.aspx)
 
