--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,9 @@
 # 2018年下半年工作日志
 
+## 工作项查询导出
+
+https://tfs.devopshub.cn/leansoft/ProjectMangement/_apis/wit/queries/%E6%88%91%E7%9A%84%E6%9F%A5%E8%AF%A2/lxm?$expand=wiql
+
 ## 工具推荐
 
 ### java
