--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -2,7 +2,10 @@
 
 ## 工作项查询导出
 
+- 用 tfs rest api
 https://tfs.devopshub.cn/leansoft/ProjectMangement/_apis/wit/queries/%E6%88%91%E7%9A%84%E6%9F%A5%E8%AF%A2/lxm?$expand=wiql
+
+- 使用vs 打开 团队资源管理器，编辑查询，另存为wiq
 
 ## 工具推荐
 
