--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -5,8 +5,8 @@
 - 用 tfs rest api
 https://tfs.devopshub.cn/leansoft/ProjectMangement/_apis/wit/queries/%E6%88%91%E7%9A%84%E6%9F%A5%E8%AF%A2/lxm?$expand=wiql
 
-- 使用vs 打开 团队资源管理器，编辑查询，另存为wiq
-
+- 使用vs 打开 团队资源管理器，编辑查询，另存为wiq，或者在Server处选择其他团队项目
+https://developers.de/blogs/holger_vetter/archive/2014/08/14/moving-queries-to-a-new-tfs-collection.aspx
 ## 工具推荐
 
 ### java
