--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -7,6 +7,37 @@ https://tfs.devopshub.cn/leansoft/ProjectMangement/_apis/wit/queries/%E6%88%91%E
 
 - 使用vs 打开 团队资源管理器，编辑查询，另存为wiq，或者在Server处选择其他团队项目
 https://developers.de/blogs/holger_vetter/archive/2014/08/14/moving-queries-to-a-new-tfs-collection.aspx
+
+
+## 工作项迁移
+
+### 首先定义好查询，并将查询从旧项目中导入到新的团队项目
+
+- 确认好需要迁移的字段（史诗故事和特性（如果没有用到则不需要）、积压工作项、任务、BUG、测试用例）
+- 在旧项目中创建树形工作项查询（注意不要创建平铺类型，否则关联关系无法导出）
+- 编辑查询定义，添加需要导出的列（包含第一步的整理的字段），其他字段建议导出的字段见以下图片：
+
+- 打开VS2017团队资源管理器，连接到旧的团队项目
+- 在VS2017的团队资源管理器中打开上面定义的查询，操作步骤：工作->查询->右键编辑
+- 在VS中打开查询定义后，随便编辑一下，点菜单，选择另存为，在保存对话框中选择 保存为wiq文件
+- 打开保存的wiq文件，悠里面的TFS项目集合地址和团队项目名称，另存为一个新wiq文件
+- 重新打开VS，连接到新的TFS团队项目，使用VS打开上一步保存的wiq文件，随便编辑一下，在菜单处点击另存为，在保存对话框中选择 Server，将查询保存至新团队项目的共享查询下
+- 保存之后，可以打开 TFS 团队项目的Web地址,查看导入的查询,建议在团队项目中至少添加了个工作项和下级任务,保证此查询能查询到
+
+### 使用Excel导出旧的工作项到新的团队项目
+
+- 新建一个Excel文件,连接到旧的团队项目,根据上面的查询定义导出旧团队项目的工作项,并保存
+- 新建一个Excel文件,连接到新的团队项目,根据上面定义的新团队项目中的查询导出工作项到Excel,此时应该看到上面创建的两个工作项一个任务
+- 检查两个Excel中的工作项列头,保证列头数量和顺序一致
+- 在第二个Excel中添加一行空行(在现有工作项的前面),然后删除现有的工作项(两行都删除)
+- 在第一个Excel中选中要复制的行,右键复制
+- 在第二个Excel中,选中上面添加的空行(选中一整行),右键粘贴,先保存
+- 在第个Excel中,点击发布,根据提示修改错误,修改完后,点发布,重复几次,直到全部发布.修复错误需注意
+	- 状态无法复制过来,先要确认好两个团队项目中的状态如何映射,然后统一将状态改为新建,对于原来的状态,可以在标签一列添加一个原状态的标签,等导入后,在批量更新为新的状态(可根据标签批量查询和更新)
+	- 附件无法同步
+
+
+
 ## 工具推荐
 
 ### java
