--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,12 @@
 # 2018年下半年工作日志
 
+## 创建分支时报错：tf246021 sql server error 829，解决办法
+
+http://www.sqlservergeeks.com/tag/error-829/
+
+
+
+
 ## 工作项查询导出
 
 - 用 tfs rest api
