--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,9 @@
 # 2018年下半年工作日志
 
+## tfs build Copy Files Over SSH gives 'handle is not a Buffer' error Solution
+
+多半是权限问题，比如说创建目录、覆盖文件，参考：https://github.com/Microsoft/vsts-tasks/issues/3190
+
 ## 创建分支时报错：tf246021 sql server error 829，解决办法
 
 http://www.sqlservergeeks.com/tag/error-829/
