--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,12 @@
 # 2018年下半年工作日志
 
+## # when type is aspFull,config postBuffer fix error: fatal: The remote end hung up unexpectedly
+
+       git config --global http.postBuffer 524288000 
+      # some comments below report having to double the value:
+      git config --global http.postBuffer 1048576000
+
+
 ## tfs build Copy Files Over SSH gives 'handle is not a Buffer' error Solution
 
 多半是权限问题，比如说创建目录、覆盖文件，参考：https://github.com/Microsoft/vsts-tasks/issues/3190
