--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,6 +1,6 @@
 # 2018年下半年工作日志
 
-## # when type is aspFull,config postBuffer fix error: fatal: The remote end hung up unexpectedly
+## git push, when type is aspFull,config postBuffer fix error: fatal: The remote end hung up unexpectedly
 
        git config --global http.postBuffer 524288000 
       # some comments below report having to double the value:
