--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,11 +1,15 @@
 # 2018年下半年工作日志
 
-## git push, when type is aspFull,config postBuffer fix error: fatal: The remote end hung up unexpectedly
+## git push, when type is aspFull,config postBuffer fix 
+
+error: fatal: The remote end hung up unexpectedly
+RPC failed; HTTP 401 curl 22 The requested URL returned error: 401
 
        git config --global http.postBuffer 524288000 
       # some comments below report having to double the value:
       git config --global http.postBuffer 1048576000
 
+https://www.cnblogs.com/wangtuda/p/3410866.html
 
 ## tfs build Copy Files Over SSH gives 'handle is not a Buffer' error Solution
 
