--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,10 @@
 # 2018年下半年工作日志
 
+##TFS遇到下面的错误
+![image.png](/.attachments/image-0ecb9c2c-6861-4ad5-80c4-024c709bc641.png)
+
+数据文件损坏了，解决办法待定
+
 ## git push, when type is aspFull,config postBuffer fix 
 
 error: fatal: The remote end hung up unexpectedly
