--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,6 +1,8 @@
 # 2018年下半年工作日志
 
 ##TFS遇到下面的错误
+`Database ID 10, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.`
+
 ![image.png](/.attachments/image-0ecb9c2c-6861-4ad5-80c4-024c709bc641.png)
 
 数据文件损坏了，解决办法待定
