--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -5,7 +5,13 @@
 
 ![image.png](/.attachments/image-0ecb9c2c-6861-4ad5-80c4-024c709bc641.png)
 
-数据文件损坏了，解决办法待定
+数据文件损坏了，解决办法:
+
+1. 恢复损坏的数据页文件：
+  检查Sql版本和恢复模式：简单和完整模式
+参考脚本：http://sliceof-it.blogspot.com/2010/12/database-id-5-page-14171728-is-marked.html
+官方说明文档：[还原页](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-pages-sql-server?view=sql-server-2014)  [还原与恢复概述 (SQL Server)](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-and-recovery-overview-sql-server?view=sql-server-2017)  [Performing Page Restores sql2005](https://docs.microsoft.com/en-us/previous-versions/sql/sql-server-2005/ms175168(v=sql.90))
+[SqlServer 数据页损坏还原测试](https://blog.csdn.net/kk185800961/article/details/50663780)
 
 ## git push, when type is aspFull,config postBuffer fix 
 
