--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -10,7 +10,7 @@
 1. 恢复损坏的数据页文件：
   查看系统日志定位最早错误时间、检查Sql版本和恢复模式：简单和完整模式
 参考脚本：[Database ID 5, Page (1:4171728) is marked RestorePending, which may indicate disk corruption., 离线丢失数据模式](http://sliceof-it.blogspot.com/2010/12/database-id-5-page-14171728-is-marked.html)
-官方说明文档：[还原页](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-pages-sql-server?view=sql-server-2014)  [还原与恢复概述 (SQL Server)](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-and-recovery-overview-sql-server?view=sql-server-2017)  [Performing Page Restores sql2005](https://docs.microsoft.com/en-us/previous-versions/sql/sql-server-2005/ms175168(v=sql.90))
+官方说明文档：[还原页sql2014](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-pages-sql-server?view=sql-server-2014)  [页还原sql2012](https://docs.microsoft.com/zh-cn/previous-versions/sql/sql-server-2012/ms175168(v=sql.110)) [还原与恢复概述 (SQL Server)](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-and-recovery-overview-sql-server?view=sql-server-2017)  [Performing Page Restores sql2005](https://docs.microsoft.com/en-us/previous-versions/sql/sql-server-2005/ms175168(v=sql.90))
 其他资料：[SqlServer 数据页损坏还原测试](https://blog.csdn.net/kk185800961/article/details/50663780) [SQL Server 2005 Page Restore](https://amihalj.wordpress.com/2012/01/10/sql-server-page-restore/)  [Msg 829，Level 21，State 1，Line 1 ,bbs](https://social.msdn.microsoft.com/Forums/sqlserver/en-US/bfbc1b9b-0253-4901-a7f4-9c6d33240723/msg-829-level-21-state-1-line-1?forum=sqldisasterrecovery)
 
 2. 重新配置应用层，集合库以附加的形式迁移到新的环境
