--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -7,15 +7,18 @@
 
 ### 数据文件损坏了，解决办法:
 
+- 0. 先 查看表的数据，看有多少页损坏： [msdb].[dbo].[suspect_pages]
 - 1. 恢复损坏的数据页文件：
-  查看系统日志定位最早错误时间、检查Sql版本和恢复模式：简单和完整模式
+  查看系统日志定位最早错误时间、检查Sql版本和恢复模式：保证是企业版且为完整模式
 参考脚本：[Database ID 5, Page (1:4171728) is marked RestorePending, which may indicate disk corruption., 离线丢失数据模式](http://sliceof-it.blogspot.com/2010/12/database-id-5-page-14171728-is-marked.html)
 官方说明文档：[还原页sql2014](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-pages-sql-server?view=sql-server-2014)  [页还原sql2012](https://docs.microsoft.com/zh-cn/previous-versions/sql/sql-server-2012/ms175168(v=sql.110)) [还原与恢复概述 (SQL Server)](https://docs.microsoft.com/zh-cn/sql/relational-databases/backup-restore/restore-and-recovery-overview-sql-server?view=sql-server-2017)  [Performing Page Restores sql2005](https://docs.microsoft.com/en-us/previous-versions/sql/sql-server-2005/ms175168(v=sql.90))
 其他资料：[SqlServer 数据页损坏还原测试](https://blog.csdn.net/kk185800961/article/details/50663780) [SQL Server 2005 Page Restore](https://amihalj.wordpress.com/2012/01/10/sql-server-page-restore/)  [Msg 829，Level 21，State 1，Line 1 ,bbs](https://social.msdn.microsoft.com/Forums/sqlserver/en-US/bfbc1b9b-0253-4901-a7f4-9c6d33240723/msg-829-level-21-state-1-line-1?forum=sqldisasterrecovery)
 
-- 2. 重新配置应用层，集合库以附加的形式迁移到新的环境
+- 2. 最坏的办法：重新配置应用层，集合库以附加的形式迁移到新的环境
 
-### dbcc checkdb ('dbname'),报以下错
+### 开始解决：
+#### 执行 dbcc checkdb ('dbname'),报以下错，[dbcc checkdb msdn帮助](https://docs.microsoft.com/zh-cn/sql/t-sql/database-console-commands/dbcc-checkdb-transact-sql?view=sql-server-2017)
+
 `
 Msg 5030, Level 16, State 12, Line 1
 The database could not be exclusively locked to perform the operation.
@@ -23,7 +26,71 @@ Msg 7926, Level 16, State 1, Line 1
 Check statement aborted. The database could not be checked as a database snapshot could not be created and the database or table could not be locked. See Books Online for details of when this behavior is expected and what workarounds exist. Also see previous errors for more details.
 `
 
-**解决办法：**
+**解决办法1，推荐使用，不影响正常使用：**
+- 1. 手工创建快照：
+`CREATE DATABASE Tfs_Configuration0807 ON  
+( NAME = Tfs_Configuration, FILENAME =   'D:\snapshop\Tfs_Configuration.ss')  AS SNAPSHOT OF Tfs_Configuration; 
+`
+- 2. 执行 dbcc checkdb ('Tfs_Configuration0807 ')，发现以下错误：
+
+```
+/*
+error:
+DBCC results for 'sys.sysschobjs'.
+There are 2924 rows in 57 pages for object "sys.sysschobjs".
+Msg 8939, Level 16, State 98, Line 2
+Table error: Object ID 41, index ID 1, partition ID 281474979397632, alloc unit ID 281474979397632 (type In-row data), page (1:322). Test (IS_OFF (BUF_IOERR, pBUF->bstat)) failed. Values are 133129 and -6.
+Msg 8928, Level 16, State 1, Line 2
+Object ID 41, index ID 1, partition ID 281474979397632, alloc unit ID 281474979397632 (type In-row data): Page (1:322) could not be processed.  See other errors for details.
+Msg 8976, Level 16, State 1, Line 2
+Table error: Object ID 41, index ID 1, partition ID 281474979397632, alloc unit ID 281474979397632 (type In-row data). Page (1:322) was not seen in the scan although its parent (1:111) and previous (1:57) refer to it. Check any previous errors.
+Msg 8978, Level 16, State 1, Line 2
+Table error: Object ID 41, index ID 1, partition ID 281474979397632, alloc unit ID 281474979397632 (type In-row data). Page (1:15548) is missing a reference from previous page (1:322). Possible chain linkage problem.
+
+DBCC results for 'sys.syscommittab'.
+There are 0 rows in 0 pages for object "sys.syscommittab".
+DBCC results for 'sys.filetable_updates_2105058535'.
+There are 0 rows in 0 pages for object "sys.filetable_updates_2105058535".
+error:
+CHECKDB found 0 allocation errors and 4 consistency errors in database 'Tfs_Configuration0807'.
+repair_allow_data_loss is the minimum repair level for the errors found by DBCC CHECKDB (Tfs_Configuration0807).
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+Msg 829, Level 21, State 1, Line 2
+Database ID 55, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.
+*/
+```
+
+
+**解决办法2，会影响到正常使用：** https://www.cnblogs.com/FocusIN/p/5392765.html
 - 1.执行SQL：  `ALTER DATABASE db_database SET SINGLE_USER WITH ROLLBACK IMMEDIATE`
 - 2.执行dbcc
 - 3.执行Sql：`ALTER DATABASE db_database SET MULTI_USER`
