--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -26,7 +26,7 @@ Msg 7926, Level 16, State 1, Line 1
 Check statement aborted. The database could not be checked as a database snapshot could not be created and the database or table could not be locked. See Books Online for details of when this behavior is expected and what workarounds exist. Also see previous errors for more details.
 `
 
-**解决办法1，推荐使用，不影响正常使用：**
+**解决办法1，推荐使用，不影响正常使用：** https://support.microsoft.com/en-us/help/928518/error-message-when-you-run-any-of-the-dbcc-check-commands-in-sql-serve
 - 1. 手工创建快照：
 `CREATE DATABASE Tfs_Configuration0807 ON  
 ( NAME = Tfs_Configuration, FILENAME =   'D:\snapshop\Tfs_Configuration.ss')  AS SNAPSHOT OF Tfs_Configuration; 
