--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,12 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## 2018 08-08
+
+[MD微信编辑器](https://blog.csdn.net/wf632856695/article/details/79196243)
+
+![image.png](/.attachments/image-0b1364e5-dab8-4002-88c2-62f61ed733b9.png) .
+
 ## 2018 03-01
 
 -[ThoughtWorks数字化时代产品团队赋能服务 V1.0](https://info.thoughtworks.com/rs/199-QDE-291/images/ThoughtWorks%20Product%20Team%20Empowerment%20V1.0.pdf?mkt_tok=eyJpIjoiWkdJME1HVmhaamxpWVdNMyIsInQiOiJWV3owMWI3UzlTZTl6bWZySE8zTVlrVXFqaHdHejRvOFlcL01QdUlaQ1ZWeGp1OFVqK0VPeE5pZ3VxVmhxOVwvdmF6K3oxdkh4SDR4U1BZNTF4RzdoaWIzNlBNY2RTSXBHZGxuaW9LckthNHFhZzZKS3paY3U3S3FYTnpzdFBMT3VzIn0%3D)
