--- a/blog/0learn/note-personal/2017.md
+++ b/blog/0learn/note-personal/2017.md
@@ -15,6 +15,27 @@
  - [Scrum 指南 中文版小册子](http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Chinese-Simplified.pdf#zoom=100)
 - [大国寡品：反全球化时代中国如何走向世界](https://item.m.jd.com/product/21383339781.html?sid=212cf5f8c1d79c91e6197a41d08982b8)
 
+## 2018 08-08 php vsts/tfs ci/cd
+
+### 参考资料
+
+https://hajekj.net/2016/10/30/creating-a-build-agent-and-definition-for-php-in-vsts/
+
+https://almvm.azurewebsites.net/labs/vstsextend/PHP/
+
+https://docs.microsoft.com/en-us/azure/devops-project/azure-devops-project-php
+
+https://developercommunity.visualstudio.com/content/problem/216978/how-to-deploy-php-web-app-using-on-premises-tfs.html
+
+https://dotblogs.com.tw/jamesfu/2017/04/02/phponwebapp
+
+### 示例项目
+
+[anjiazhixun AlmvmDemo](https://anjiazhixun.visualstudio.com/AlmvmDemo)
+[AzureDevOpsProjPHPLaravelDemo](https://anjiazhixun.visualstudio.com/AzureDevOpsProjPHPLaravelDemo)
+[Azure DevOps Projects: AzureDevOpsProjPHPLaravelDemo](https://portal.azure.com/#@lxm37282348outlook.onmicrosoft.com/resource/subscriptions/5132f8c8-ccfc-4613-9424-d08bf5e6d1f6/resourceGroups/VstsResourceGroup-AzureDevOpsProjPHPLaravelDemo/providers/microsoft.visualstudio/account/anjiazhixun/project/AzureDevOpsProjPHPLaravelDemo)
+
+
 ## 2018 08-08
 
 [MD微信编辑器](https://blog.csdn.net/wf632856695/article/details/79196243)
