--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -354,6 +354,7 @@
     运行应用：docker run -itd -p 80:80 demoweb:1.0
     查看镜像：sudo docker image ls
     查看当前容器的运行状态：sudo docker ps 
+    查看容器运行日志：docker logs -f -t --since="2018-09-10" labs_devopslabs_1
     初始化swarm集群：docker swarm init
     加入集群（通过复制 初始化swarm集群的输出结果）：docker swarm join --token XXX 
 
