--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,10 @@
 # 2018年下半年工作日志
 
+## 微信公众号消息通知开发
+
+模板消息不能有特殊字符：\r\n, 参考资料：https://blog.csdn.net/javahighness/article/details/73929211
+
+
 ##TFS遇到下面的错误
 `Database ID 10, Page (1:322) is marked RestorePending, which may indicate disk corruption. To recover from this state, perform a restore.`
 
