--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -369,7 +369,10 @@
 默认生成的是绿色的程序，不会生成安装包，加上BootstrapperEnabled=true会生成setup.exe
 - [Web App stackoverflow](https://stackoverflow.com/questions/13920146/using-msbuild-exe-to-publish-a-asp-net-mvc-4-project-with-the-cmd-line)
 
-## 2017-11-9 redgate-readyroll Db DevOps
+## 2017-11-9 redgate-readyroll Db DevOps (20181023更新)
+
+[ReadyRoll- Develop and deploy databases in Visual Studio Enterprise 2017 中文资源](https://almvm.devopshub.cn/labs/tfs/readyroll/)
+
 - [集成Flyway，实现数据库的版本管理](http://www.cnblogs.com/danzhang/p/7748070.html)
 - [动手实验:ReadyRoll- Develop and deploy databases in Visual Studio Enterprise 2017](https://almvm.azurewebsites.net/labs/tfs/readyroll/)
 - [youtube视频资料：How to develop and deploy database changes with ReadyRoll and Octopus Deploy](https://www.youtube.com/watch?v=CEWTut6vLEs)
