--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -371,6 +371,8 @@
 
 ## 2017-11-9 redgate-readyroll Db DevOps (20181023更新)
 
+[Redgate SqlChange Automation/Core 对比 ,之前叫 ReadyRoll](https://marketplace.visualstudio.com/items?itemName=vs-publisher-306627.RedgateSqlChangeAutomation)
+
 [ReadyRoll- Develop and deploy databases in Visual Studio Enterprise 2017 中文资源](https://almvm.devopshub.cn/labs/tfs/readyroll/)
 
 - [集成Flyway，实现数据库的版本管理](http://www.cnblogs.com/danzhang/p/7748070.html)
