--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -371,6 +371,8 @@
 
 ## 2017-11-9 redgate-readyroll Db DevOps (20181023更新)
 
+[SQL Source Control 6 documentation](https://documentation.red-gate.com/soc6)
+
 [SQL Change Automation 帮助文档：](https://documentation.red-gate.com/display/SCA3/Automated+deployment+with+SQL+Source+Control+projects)
 
 [Redgate SQL Change Automation Core](https://marketplace.visualstudio.com/items?itemName=vs-publisher-306627.RedgateSqlChangeAutomation)
