--- a/blog/0learn/note-work/2017.md
+++ b/blog/0learn/note-work/2017.md
@@ -374,11 +374,13 @@
 [SQL Source Control 6 documentation](https://documentation.red-gate.com/soc6)
 
 
-[SQL Change Automation 帮助文档：](https://documentation.red-gate.com/display/SCA3/Automated+deployment+with+SQL+Source+Control+projects)
+[SQL Change Automation 帮助文档](https://documentation.red-gate.com/display/SCA3/Automated+deployment+with+SQL+Source+Control+projects)
 
 [Redgate SQL Change Automation Core](https://marketplace.visualstudio.com/items?itemName=vs-publisher-306627.RedgateSqlChangeAutomation)
 
-[Redgate SqlChange Automation/Core 对比 ,之前叫 ReadyRoll](https://www.red-gate.com/products/sql-development/sql-change-automation/resources/)
+[Redgate SqlChange Automation/Core 对比 ,之前叫 ReadyRoll](https://www.red-gate.com/products/sql-development/sql-change-automation/sql-change-automation-core?utm_source=microsoft&utm_medium=link&utm_campaign=readyroll&utm_term=vsmarketplace-2017)
+
+[SQL Change Automation 官方资料](https://www.red-gate.com/products/sql-development/sql-change-automation/resources/)
 
 [ReadyRoll- Develop and deploy databases in Visual Studio Enterprise 2017 中文资源](https://almvm.devopshub.cn/labs/tfs/readyroll/)
 
