--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,5 +1,13 @@
 # 2018年下半年工作日志
 
+## TFS 与第三方系统集成相关资料
+
+- [选择合适的身份认证](https://docs.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/authentication-guidance?view=vsts#q-is-this-guidance-only-for-azure-devops-services-or-is-this-also-relevant-for-on-prem-tfs-users)
+
+- [PAT 认证方式](https://docs.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/pats?view=vsts)
+
+- [Azure DevOps Services（和TFS）的.NET客户端库](https://docs.microsoft.com/en-us/azure/devops/integrate/concepts/dotnet-client-libraries?view=vsts)
+
 ## 微信公众号消息通知开发
 
 模板消息不能有特殊字符：\r\n, 参考资料：https://blog.csdn.net/javahighness/article/details/73929211
