--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -8,6 +8,8 @@
 
 - [Azure DevOps Services（和TFS）的.NET客户端库](https://docs.microsoft.com/en-us/azure/devops/integrate/concepts/dotnet-client-libraries?view=vsts)
 
+- [创建工作项：BUG 的示例](https://docs.microsoft.com/en-us/azure/devops/integrate/quickstarts/create-bug-quickstart?view=vsts)
+
 ## 微信公众号消息通知开发
 
 模板消息不能有特殊字符：\r\n, 参考资料：https://blog.csdn.net/javahighness/article/details/73929211
