--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -10,6 +10,10 @@
 
 - [创建工作项：BUG 的示例](https://docs.microsoft.com/en-us/azure/devops/integrate/quickstarts/create-bug-quickstart?view=vsts)
 
+- [Microsoft.TeamFoundationServer.Client for net ](https://www.nuget.org/packages/Microsoft.TeamFoundationServer.Client/)
+
+[NET客户端库正式版 Net  Core 目前不支持，但预览版目前可用](https://github.com/Microsoft/vsts-dotnet-samples/issues/93)
+
 ## 微信公众号消息通知开发
 
 模板消息不能有特殊字符：\r\n, 参考资料：https://blog.csdn.net/javahighness/article/details/73929211
