--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -12,7 +12,9 @@
 
 - [Microsoft.TeamFoundationServer.Client for net ](https://www.nuget.org/packages/Microsoft.TeamFoundationServer.Client/)
 
-[NET客户端库正式版 Net  Core 目前不支持，但预览版目前可用](https://github.com/Microsoft/vsts-dotnet-samples/issues/93)
+- [NET客户端库正式版 Net  Core 目前不支持，但预览版据说可用，参考这里](https://github.com/Microsoft/vsts-dotnet-samples/issues/93)
+
+- [client-libraries 代码片断](https://docs.microsoft.com/en-us/azure/devops/integrate/get-started/client-libraries/samples?view=vsts)
 
 ## 微信公众号消息通知开发
 
