--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -2,6 +2,8 @@
 
 ## TFS 与第三方系统集成相关资料
 
+- [asp.net webhooks 模块介绍](https://docs.microsoft.com/zh-cn/aspnet/webhooks/)
+
 - [选择合适的身份认证](https://docs.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/authentication-guidance?view=vsts#q-is-this-guidance-only-for-azure-devops-services-or-is-this-also-relevant-for-on-prem-tfs-users)
 
 - [PAT 认证方式](https://docs.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/pats?view=vsts)
