--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -1,8 +1,50 @@
 # 2018年下半年工作日志
 
-##
+## 一年总结
 
 ### DevOps文档中心
+
+- 文档编写、翻译
+- 基于MDWiki 的文档中心2.0升级
+
+### 冠捷科技现场实施（一期 ）
+
+- Azure DevOps Server 环境部署
+- 代码迁移（迁移至TFVC）
+- 研发流程文档、操作手册文档编写
+
+### 华为现场实施
+
+- TFS 2018 高可用环境部署
+- 现场技术支持
+
+### Labs产品开发
+
+- Labs培训 Azure DevOps Server 镜像同步（不同订阅间）
+- yo team 流水线项目实现
+
+### 兴业银行现场实施
+
+- 流程模板定制
+- 研发流程规范文档、操作手册文档编写
+- 境外网银项目组工作项权限、CICD流水线配置
+- 福州OA项目组 Azure DevOps Server 培训及现场技术支持
+
+### 国电南自现场实施
+
+- Azure DevOps Server 数据损坏问题现场技术支持
+- Azure DevOps Server 高可用环境部署
+- 现场技术支持
+
+### Labs产品开发
+
+- 微信通知功能开发
+
+### 冠捷科技现场实施（二期 ）
+
+- 流程模板与工作项定制
+- 研发流程规范文档编写
+- ITSD&&TFS 系统集成接口开发
 
 ## TFS 与第三方系统集成相关资料
 
