--- a/blog/0learn/note-work/2018.md
+++ b/blog/0learn/note-work/2018.md
@@ -27,7 +27,7 @@
 
 - 流程模板定制
 - 研发流程规范文档、操作手册文档编写
-- 境外网银项目组工作项权限、CICD流水线配置
+- 境外网银项目组代码迁移及培训，工作项权限、CICD流水线配置
 - 福州OA项目组 Azure DevOps Server 培训及现场技术支持
 
 ### 国电南自现场实施
@@ -38,7 +38,7 @@
 
 ### Labs产品开发
 
-- 微信通知功能开发
+- Azure DevOps Server 微信通知功能开发
 
 ### 冠捷科技现场实施（二期 ）
 
