--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -11,7 +11,7 @@ https://docs.microsoft.com/zh-cn/dotnet/standard/modernize-with-azure-and-contai
 
 https://docs.azure.cn/zh-cn/articles/guidance/developerdifferences
 
-[Modernize-Existing-.NET-applications-with-Azure-cloud-and-Windows-Containers-eBook]()
+file:///D:/DataLiXiaoMing/study-data/ebook/Modernize-Existing-.NET-applications-with-Azure-cloud-and-Windows-Containers-eBook.pdf
 
 
 ## ID4启用HTTPS
