--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,6 +1,21 @@
 
 ## asp net core docker
 
+- Alpine Linux
+
+> 参考资料：https://blog.csdn.net/freeking101/article/details/80795752
+
+ > Alpine 的意思是“高山的”，比如 Alpine plants高山植物，Alpine skiing高山滑雪、the alpine resort阿尔卑斯山胜地。
+
+ >   Alpine Linux 网站首页注明“Small！Simple！Secure！Alpine Linux is a security-oriented, lightweight Linux distribution based on musl libc and busybox.”概括了以下特点：
+
+> 1、小巧：基于Musl libc和busybox，和busybox一样小巧，最小的Docker镜像只有5MB；
+  2、安全：面向安全的轻量发行版；
+  3、简单：提供APK包管理工具，软件的搜索、安装、删除、升级都非常方便。
+  4、适合容器使用：由于小巧、功能完备，非常适合作为容器的基础镜像。
+
+- asp net core docker 参考资料
+
 https://docs.microsoft.com/zh-cn/aspnet/core/host-and-deploy/docker/?view=aspnetcore-2.2
 
 https://docs.microsoft.com/zh-cn/dotnet/standard/microservices-architecture/net-core-net-framework-containers/
