--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,6 +1,12 @@
 
 ## asp net core docker
 
+- Server Core:无GUI
+
+- Windows Server 2016-Nano Server介绍
+
+https://blog.csdn.net/wenzhongxiang/article/details/79399467
+
 - Alpine Linux
 
 > 参考资料：https://blog.csdn.net/freeking101/article/details/80795752
