--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,3 +1,10 @@
+## tfs burndown
+
+burndown for user story point:
+https://marketplace.visualstudio.com/items?itemName=tomkamphuis.vsts-extensions-myExtensions
+
+
+https://docs.microsoft.com/en-us/azure/devops/boards/sprints/sprint-burndown?view=tfs-2018
 
 ## asp net core docker
 
