--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -3,8 +3,18 @@
 burndown for user story point:
 https://marketplace.visualstudio.com/items?itemName=tomkamphuis.vsts-extensions-myExtensions
 
+### tfs burndown 配置
 
 https://docs.microsoft.com/en-us/azure/devops/boards/sprints/sprint-burndown?view=tfs-2018
+
+```
+1. Assign backlog items to a sprint
+2. Add tasks
+3. Set sprint capacity
+4. Adjust work to fit capacity
+5. Share your sprint plan
+6. Update the taskboard
+```
 
 ## asp net core docker
 
