--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,3 +1,21 @@
+## Aspect。net Core授权和认证
+
+https://www.cnblogs.com/lonelyxmas/tag/IdentityServer4/
+
+授权
+https://www.cnblogs.com/lonelyxmas/p/10618901.html
+https://docs.microsoft.com/zh-cn/aspnet/core/security/authorization/resourcebased?view=aspnetcore-2.2
+https://www.cnblogs.com/Leo_wl/p/5597048.html
+https://www.jianshu.com/p/0ed4d820809c?tdsourcetag=s_pctim_aiomsg
+
+oath2和oidc
+https://www.cnblogs.com/lonelyxmas/p/10635086.html
+http://www.jessetalk.cn/2018/04/04/oidc-asp-net-core/
+
+
+
+
+
 ## Sql Server 高可用相关端口
 
 ![image.png](/.attachments/image-b877dbe2-705a-4366-91fa-83258beb7ce3.png)
