--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -9,6 +9,10 @@ https://docs.microsoft.com/zh-cn/aspnet/core/security/authorization/resourcebase
 https://www.cnblogs.com/Leo_wl/p/5597048.html
 https://www.jianshu.com/p/0ed4d820809c?tdsourcetag=s_pctim_aiomsg
 
+操作权限（查看、创建、修改、删除等之类）
+
+https://www.cnblogs.com/lonelyxmas/p/10618903.html
+
 oath2和oidc
 https://www.cnblogs.com/lonelyxmas/p/10635086.html
 http://www.jessetalk.cn/2018/04/04/oidc-asp-net-core/
