--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -18,6 +18,10 @@ oath2和oidc
 https://www.cnblogs.com/lonelyxmas/p/10635086.html
 http://www.jessetalk.cn/2018/04/04/oidc-asp-net-core/
 
+add claimtype to id token(登陆后返回给Client的添加自己的Claim)
+
+https://stackoverflow.com/questions/41387069/identity-server-4-adding-claims-to-access-token/43369166#43369166
+
 
 
 
