--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,3 +1,9 @@
+## Microsoft Account ID4登陆
+
+https://damienbod.com/2019/05/17/updating-microsoft-account-logins-in-asp-net-core-with-openid-connect-and-azure-active-directory/
+
+https://github.com/damienbod/AspNetCoreID4External
+
 ## Aspect。net Core授权和认证
 
 https://docs.microsoft.com/zh-cn/aspnet/core/security/authentication/identity?view=aspnetcore-2.2&tabs=visual-studio
