--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -8,11 +8,16 @@ https://dynalon.github.io/mdwiki/#!index.md
 
 https://m.toutiaocdn.com/group/6717631819438621191/?app=news_article&timestamp=1566870995&req_id=2019082709563511024919808037BEA5C5&group_id=6717631819438621191
 
+https://github.com/docsifyjs/docsify
+
+案例：
 https://github.com/docsifyjs/awesome-docsify
 
-typora: 
+已集成聊天系统：https://gitter.im
 
-vuepress: 
+### typora: 
+
+### vuepress: 
 
 ## Microsoft Account ID4登陆
 
