--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -15,7 +15,9 @@ https://github.com/docsifyjs/awesome-docsify
 
 - 有丰富的插件
 - 已集成聊天系统：https://gitter.im
-- 可集成评论系统（Github Issue 和 Preact 开发的评论插件）：https://gitalk.github.io/
+- 可集成评论系统（Github Issue 和 Preact 开发的评论插件）：
+https://gitalk.github.io/
+https://segmentfault.com/a/1190000018072952
 
 ### typora: 
 
