--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -19,9 +19,12 @@ https://github.com/docsifyjs/awesome-docsify
 https://gitalk.github.io/
 https://segmentfault.com/a/1190000018072952
 
-### typora: 
+### typora: 一个MD编辑器，
+https://www.jianshu.com/p/b7fd16a44508
 
 ### vuepress: 
+
+http://caibaojian.com/vuepress/guide/
 
 ## Microsoft Account ID4登陆
 
