--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -22,7 +22,7 @@ https://segmentfault.com/a/1190000018072952
 ### typora: 一个MD编辑器，
 https://www.jianshu.com/p/b7fd16a44508
 
-### vuepress: 
+### vuepress: 目前还不太成熟，与Hexo类似，生成HTML
 
 http://caibaojian.com/vuepress/guide/
 
