--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -11,6 +11,9 @@ https://m.toutiaocdn.com/group/6717631819438621191/?app=news_article&timestamp=1
 https://github.com/docsifyjs/docsify
 
 案例：
+源文件：https://github.com/alibaba/weex-ui/tree/master/docs
+效果：https://alibaba.github.io/weex-ui
+
 https://github.com/docsifyjs/awesome-docsify
 
 - 有丰富的插件
