--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -30,8 +30,13 @@ https://segmentfault.com/a/1190000015237352
 
 http://caibaojian.com/vuepress/guide/
 
+### Docute
+
+https://docute.org/zh
+
+
 ```
-Nuxt
+# Nuxt
 VuePress 能做的事情，Nuxt 也同样能够实现，但是，它是为构建应用程序而设计的。
 而 VuePress 专注于以内容为中心的静态网站，并且为开箱即用的技术文档，提供量身定制的功能。
 
@@ -43,6 +48,17 @@ VuePress 能做的事情，Nuxt 也同样能够实现，但是，它是为构建
 Hexo 一直在为 Vue 文档提供服务 - 事实上，离我们的主站完全迁移到 VuePress，可能还要经过一
 段时间。其中最大的问题是，它的主题系统是非常静态和基于字符串的 - 我们确实需要利用 Vue 来
 实现布局和交互。此外，无法对 Hexo 的 markdown 渲染，进行极其灵活的配置。
+
+# VuePress / GitBook / Hexo
+这些项目在构建时会生成静态的 HTML，这对 SEO 非常有帮助。
+
+如果你在意 SEO，那你可能会喜欢使用 presite  来预渲染你的网站。
+
+# Docsify
+Docsify  和 Docute 几乎相同，但具有不同的 UI 和不同的使用方式。
+
+Docute（60kB）比 Docisfy（20kB）大 3 倍，因为我们使用了 Vue，Vue Router 和 Vuex，而 Docsify 使用的是 vanilla JavaScript。
+
 ```
 
 ### typora: 一个MD编辑器，
