--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,3 +1,61 @@
+## redgate 参考资料
+
+https://azuredevopslabs.com/labs/vstsextend/redgate/
+
+http://assets.red-gate.com/products/sql-development/sql-source-control/assets/pdf/how-to-set-up-sql-source-control-evaluators.pdf
+
+https://documentation.red-gate.com/sca/developing-databases/working-with-the-ssms-add-in
+
+https://documentation.red-gate.com/sca/deploying-database-changes/automated-deployment-with-sql-source-control-projects
+
+
+## docker 相关命令
+
+删除Docker Image： docker rmi -f $(docker images -q)
+
+进入某个容器
+docker exec -it 0b2ab4013d52 bash
+
+复制文件：从容器到本地：
+
+docker cp <containerId>:/file/path/within/container /host/path/target
+
+复制文件：从本地到容器：
+
+docker cp filename <containerId>:/file/path/within/container
+
+
+## sonarqube 相关资料
+
+https://docs.sonarqube.org/latest/setup/get-started-2-minutes/
+
+https://docs.sonarqube.org/latest/setup/install-server/
+
+
+https://docs.sonarqube.org/latest/analysis/scan/sonarscanner-for-azure-devops/
+
+
+https://docs.sonarqube.org/latest/analysis/overview/
+
+https://docs.sonarqube.org/latest/analysis/pull-request/
+
+
+https://docs.sonarqube.org/latest/analysis/languages/csharp/
+
+
+https://docs.sonarqube.org/latest/analysis/scan/sonarscanner-for-maven/
+
+
+https://azuredevopslabs.com/labs/vstsextend/sonarqube/
+
+
+https://www.sonarlint.org/visualstudio/
+
+https://almvm.devopshub.cn/labs/vstsextend/sonarqube/
+
+https://almvm.devopshub.cn/labs/java/sonarqube/
+
+
 ## writage:Markdown plugin for Microsoft Word
 
 http://www.writage.com/
