--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -11,16 +11,19 @@ https://documentation.red-gate.com/sca/deploying-database-changes/automated-depl
 
 ## docker 相关命令
 
-删除Docker Image： docker rmi -f $(docker images -q)
+- 编辑文件
+vi filename 回车，输入 a/i 进入编辑模式，修改文件，按esc 退出编辑模式，输入:wq 回车保存并退出。
 
-进入某个容器
+- 删除Docker Image： docker rmi -f $(docker images -q)
+
+- 进入某个容器
 docker exec -it 0b2ab4013d52 bash
 
-复制文件：从容器到本地：
+- 复制文件：从容器到本地：
 
 docker cp <containerId>:/file/path/within/container /host/path/target
 
-复制文件：从本地到容器：
+- 复制文件：从本地到容器：
 
 docker cp filename <containerId>:/file/path/within/container
 
