--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -27,6 +27,9 @@ docker cp <containerId>:/file/path/within/container /host/path/target
 
 docker cp filename <containerId>:/file/path/within/container
 
+- 查看日志
+sudo docker logs -f -t --tail 200 3b92e3aab06a
+
 
 ## sonarqube 相关资料
 
