--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -30,6 +30,16 @@ docker cp filename <containerId>:/file/path/within/container
 - 查看日志
 sudo docker logs -f -t --tail 200 3b92e3aab06a
 
+- 生成Image
+docker build -t second:v1.0 .
+
+- 运行
+
+docker run  -p 80:80 -p 443:443  cbc8c24ce885
+
+- 推送
+
+sudo docker push devopslabs.azurecr.io/guacamole:latest
 
 ## sonarqube 相关资料
 
