--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -1,3 +1,18 @@
+## TFS 字段相关资料
+
+- 字段中所有的XML属性元素
+https://docs.microsoft.com/zh-cn/azure/devops/reference/xml/all-field-xml-elements-reference?view=azure-devops
+
+https://docs.microsoft.com/en-us/azure/devops/boards/work-items/work-item-fields?view=tfs-2018#field-names
+
+https://docs.microsoft.com/en-us/azure/devops/boards/queries/titles-ids-descriptions?view=tfs-2018
+
+- 所有字段 索引
+
+https://docs.microsoft.com/en-us/azure/devops/boards/work-items/guidance/work-item-field?view=tfs-2018
+
+String fields take a max of 255 characters. PlainText/HTML will take a max of 32K
+
 ## redgate 参考资料
 
 https://azuredevopslabs.com/labs/vstsextend/redgate/
