--- a/blog/0learn/note-work/2019.md
+++ b/blog/0learn/note-work/2019.md
@@ -11,6 +11,10 @@ https://docs.microsoft.com/en-us/azure/devops/boards/queries/titles-ids-descript
 
 https://docs.microsoft.com/en-us/azure/devops/boards/work-items/guidance/work-item-field?view=tfs-2018
 
+- 修改附件大小
+
+http://www.tfstutorial.com/work-item-attachment-size-limit
+
 String fields take a max of 255 characters. PlainText/HTML will take a max of 32K
 
 ## redgate 参考资料
